Adjustments to the challenges order and content. Fix for dark mode syntax.

--- a/common/app/routes/Challenges/challenges.less
+++ b/common/app/routes/Challenges/challenges.less
@@ -113,6 +113,9 @@
     .cm-keyword, .cm-attribute {
       color:#9BBBDC;
     }
+    .cm-s-default .cm-variable-2{
+      color:#7eb1e4;
+    }
     &-line {
       caret-color:#ABABAB;
     }
